--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -8,6 +8,8 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_top_bar"
         android:layout_width="0dp"
@@ -33,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이송희님 안녕하세요!"
-            style="@style/Display3"
+            style="@style/Title1"
             app:layout_constraintStart_toEndOf="@id/iv_logo_icon"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -47,6 +49,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/ic_logout"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -135,17 +138,18 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_width="300dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         app:cardCornerRadius="16dp"
                         android:layout_marginStart="24dp"
                         app:cardElevation="6dp"
                         android:backgroundTint="#FFF6DA"
+                        android:layout_marginTop="12dp"
                         android:layout_marginBottom="32dp"
-                        android:layout_marginTop="14dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:cardBackgroundColor="@color/white">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/btn_register_laptop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
 
@@ -203,14 +207,14 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cv_mobile"
                         android:layout_width="300dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         android:layout_marginStart="18dp"
-                        android:layout_marginTop="14dp"
-                        android:layout_marginBottom="32dp"
                         android:backgroundTint="#C9F7D5"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="16dp"
                         app:cardElevation="6dp"
+                        android:layout_marginTop="14dp"
+                        android:layout_marginBottom="32dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/cv_laptop"
                         app:layout_constraintTop_toTopOf="parent"
@@ -273,14 +277,14 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_width="300dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         app:cardCornerRadius="16dp"
                         android:layout_marginStart="24dp"
                         app:cardElevation="6dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginEnd="24dp"
-                        android:layout_marginBottom="32dp"
                         android:layout_marginTop="14dp"
+                        android:layout_marginBottom="32dp"
                         app:layout_constraintStart_toEndOf="@id/cv_mobile"
                         app:cardBackgroundColor="#FBE6E2">
 
@@ -351,23 +355,25 @@
                 android:id="@+id/tv_submission_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="대여 기기 등록"
+                android:text="제출 파일 목록"
                 app:layout_constraintTop_toBottomOf="@id/sv_register"
                 app:layout_constraintStart_toStartOf="parent"
                />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_submission"
-                android:layout_width="0dp"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginBottom="24dp"
-                android:layout_marginTop="14dp"
-                tools:listitem="@layout/item_submission"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_submission_title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_submission"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_submission_title"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_submission" />
 
 
 
