--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#FCFCFC"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -368,11 +368,6 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_submission_title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
-
-
-
-
-
 
 
 
