--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
@@ -6,14 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.guide.FrontShotGuideFragment">
 
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/fl_camera"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+    <!-- 📸 카메라 미리보기 뷰 -->
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
     <ImageButton
         android:id="@+id/btn_shot"
@@ -25,6 +24,42 @@
         android:layout_marginEnd="24dp"
         android:src="@drawable/ic_camera_btn"
         android:background="?attr/selectableItemBackgroundBorderless"/>
+
+    <ImageButton
+        android:id="@+id/btn_guide"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_guide_info"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="20dp"
+        />
+
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cancel"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_margin="24dp"/>
+
+    <com.pizza.kkomdae.ui.CameraSideOverlayView
+        android:id="@+id/overlayView"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="match_parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_guide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
@@ -114,7 +149,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            style="@style/Body1"
             android:text="좌측면 전체가 프레임 안에 배치되도록 하세요"
             app:layout_constraintTop_toTopOf="@id/iv_image1"
             app:layout_constraintStart_toEndOf="@id/iv_image1"
@@ -145,7 +179,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:textColor="@color/white"
-            style="@style/Body1"
             android:text="포트와 버튼이 모두 보이도록 촬영하세요"
             app:layout_constraintTop_toTopOf="@id/iv_image2"
             app:layout_constraintStart_toEndOf="@id/iv_image2"
@@ -175,7 +208,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="모든 연결부가 선명하게 보이도록 촬영하세요"
-            style="@style/Body1"
             android:textColor="@color/white"
             android:layout_marginStart="12dp"
             app:layout_constraintTop_toTopOf="@id/iv_image3"
@@ -218,7 +250,7 @@
         android:layout_marginEnd="50dp"/>
 
 
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
