--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
@@ -6,16 +6,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.guide.FrontShotGuideFragment">
 
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/fl_camera"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+    <!-- 📸 카메라 미리보기 뷰 -->
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!-- 📌 오버레이: 네모 틀과 반투명 검은색 배경 -->
+    <com.pizza.kkomdae.ui.CameraOverlayView
+        android:id="@+id/overlayView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
 
     <ImageButton
+        android:visibility="gone"
         android:id="@+id/btn_shot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,6 +32,35 @@
         android:layout_marginEnd="24dp"
         android:src="@drawable/ic_camera_btn"
         android:background="?attr/selectableItemBackgroundBorderless"/>
+
+    <ImageButton
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="24dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cancel"
+        android:id="@+id/btn_back"/>
+
+    <ImageButton
+        android:visibility="gone"
+        android:id="@+id/btn_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_guide_info"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="20dp"
+        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_guide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -214,7 +250,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:backgroundTint="@color/blue300"
         android:layout_marginEnd="50dp"/>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
