feat: step1 화면 연결
step1 화면 연결중
S12P21D101-194 #in-progress

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
@@ -75,6 +75,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="356.6:229.1">
         <ImageView
+            android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@color/blue500"
