fix: 좌측 촬영 화면 수정
- 가이드 켜져있을때 촬영 버튼 숨김

좌측 촬영 화면 수정
S12P21D101-194 #in-progress

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
@@ -16,6 +16,7 @@
 
     <ImageButton
         android:id="@+id/btn_shot"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
