feat : 수령확인서 화면 로직 구현 및 xml 수정 - 뒤로가기 버튼 클릭 시 메인 화면으로 이동 - 타이틀, 제목 실제 제목으로 반영 - 동의 항목 누를 때 숨겨짐 처리 + 버튼 클릭 이벤트 - 모두 동의해야지만 다음 버튼 활성화 + 눌리도록 처리 - 다음 버튼 누르면 전체 가이드로 이동 S12P21D101-180

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_all_step_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_all_step_guide.xml
@@ -82,8 +82,8 @@
                         android:layout_height="32dp"
                         android:background="@drawable/circle_gray_background"
                         android:text="1"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"
+                        style="@style/Title1"
+                        android:textColor="@color/blue500"
                         android:gravity="center"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
@@ -163,8 +163,8 @@
                         android:layout_height="32dp"
                         android:background="@drawable/circle_gray_background"
                         android:text="2"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"
+                        style="@style/Title1"
+                        android:textColor="@color/blue500"
                         android:gravity="center"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
@@ -231,8 +231,8 @@
                         android:layout_height="32dp"
                         android:background="@drawable/circle_gray_background"
                         android:text="3"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"
+                        style="@style/Title1"
+                        android:textColor="@color/blue500"
                         android:gravity="center"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
@@ -265,18 +265,19 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
-                android:id="@+id/btn_complete"
+                android:id="@+id/btn_Start"
                 android:layout_width="0dp"
-                android:layout_height="51dp"
+                android:layout_height="56dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/steps_layout"
-                android:layout_marginBottom="24dp"
-                android:text="다음"
+                android:text="등록 시작하기"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
-                android:backgroundTint="@color/blue200"
+                android:backgroundTint="@color/blue500"
                 style="@style/Title1"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
