--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_oath.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_oath.xml
@@ -71,6 +71,7 @@
                         layout="@layout/item_oath_title" />
 
                     <LinearLayout
+                        android:id="@+id/oath_content1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -183,6 +184,7 @@
                         layout="@layout/item_oath_title" />
 
                     <LinearLayout
+                        android:id="@+id/oath_content2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -310,6 +312,7 @@
                         layout="@layout/item_oath_title" />
 
                     <LinearLayout
+                        android:id="@+id/oath_content3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -438,6 +441,7 @@
                         layout="@layout/item_oath_title" />
 
                     <LinearLayout
+                        android:id="@+id/oath_content4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -498,9 +502,9 @@
             </androidx.cardview.widget.CardView>
 
             <Button
-                android:id="@+id/btn_complete"
+                android:id="@+id/btn_next"
                 android:layout_width="0dp"
-                android:layout_height="51dp"
+                android:layout_height="56dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardAgreement4"
