--- a/frontend/Kkomdae/app/src/main/res/layout/item_oath_title.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_oath_title.xml
@@ -2,19 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="0dp"
-    android:background="@drawable/submission_border_rounded"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/oath_title_background_selector"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <CheckBox
-        android:id="@+id/cb_check"
+    <ImageView
+        android:id="@+id/iv_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:src="@drawable/ic_check_false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:checked="false"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/tv_model_number"
@@ -25,8 +25,8 @@
         android:textColor="@color/gray700"
         android:gravity="center_vertical"
         android:paddingVertical="16dp"
-        android:layout_marginStart="0dp"
-        app:layout_constraintStart_toEndOf="@id/cb_check"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/iv_check"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -49,10 +49,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="보기"
-        android:textSize="14sp"
-        android:textColor="#000000"
-        android:layout_marginEnd="16dp"
+        style="@style/Label3"
+        android:textColor="@color/gray300"
+        android:layout_marginEnd="20dp"
+        tools:visibility="visible"
         android:visibility="gone"
+        android:background="@drawable/underline_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
