--- a/frontend/Kkomdae/app/src/main/res/values/themes.xml
+++ b/frontend/Kkomdae/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.Kkomdae" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowBackground">#FCFCFC</item>
+        <item name="android:statusBarColor">#FCFCFC</item> <!-- ✅ 상태바 흰색 -->
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.Kkomdae" parent="Base.Theme.Kkomdae" />
