--- a/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
@@ -3,9 +3,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/white"
-    app:cardCornerRadius="30dp"
+    app:cardCornerRadius="18dp"
     app:strokeColor="@color/gray200"
     app:strokeWidth="2dp"
+    android:layout_margin="8dp"
     app:cardElevation="6dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -16,25 +17,25 @@
         android:layout_height="wrap_content">
 
 
+        <ImageView
+            android:id="@+id/iv_position"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_position"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_front_laptop"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Title1"
-            android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@id/iv_position"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tv_position"
             android:text="전면부"/>
-
-        <ImageView
-            android:id="@+id/iv_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/ic_front_laptop"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
