--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
@@ -14,25 +14,21 @@
         android:layout_width="0dp"
         android:layout_height="?actionBarSize">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_back"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"/>
+        <include
+            android:id="@+id/top_bar"
+            layout="@layout/layout_register_top_bar"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/tv_text1"
-        app:layout_constraintBottom_toTopOf="@id/tv_text2"
+        app:layout_constraintTop_toBottomOf="@id/cl_top_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="노트북 촬영 완료!"
+        android:layout_marginTop="12dp"
         style="@style/Display1"
         android:textColor="@color/gray700"/>
 
@@ -41,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AI가 꼼꼼하게 분석할게요"
-        app:layout_constraintBottom_toTopOf="@id/cv_image"
+        app:layout_constraintTop_toBottomOf="@id/tv_text1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp"
@@ -49,12 +45,11 @@
 
     <TextView
         android:id="@+id/tv_text3"
-        app:layout_goneMarginTop="20dp"
+        app:layout_goneMarginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="모든 면을 터치하여 확인하세요"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         style="@style/Title2"
@@ -69,10 +64,10 @@
         android:layout_marginEnd="32dp"
         app:cardCornerRadius="40dp"
         app:cardElevation="4dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_text2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv_text3">
+        app:layout_constraintStart_toStartOf="parent">
         <ImageView
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
@@ -85,9 +80,10 @@
         android:id="@+id/rv_position"
         android:layout_width="0dp"
         android:layout_height="0dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginVertical="24dp"
+        android:layout_marginVertical="12dp"
         app:layout_constraintTop_toBottomOf="@id/tv_text3"
         app:layout_constraintBottom_toTopOf="@id/cl_tip"/>
 
