--- a/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
@@ -4,10 +4,11 @@
     android:layout_height="wrap_content"
     android:backgroundTint="@color/white"
     app:cardCornerRadius="18dp"
+    android:layout_marginVertical="15dp"
     app:strokeColor="@color/gray200"
     app:strokeWidth="2dp"
-    android:layout_margin="8dp"
-    app:cardElevation="6dp"
+    android:layout_marginHorizontal="15dp"
+    app:cardElevation="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +21,7 @@
         <ImageView
             android:id="@+id/iv_position"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_position"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Title1"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@id/iv_position"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
