feat : Step 2 가이드 xml 개발 S12P21D101-125

--- a/frontend/Kkomdae/app/src/main/res/layout/layout_register_top_bar.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_register_top_bar.xml
@@ -4,39 +4,29 @@
     android:layout_height="?actionBarSize"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <ImageView
-        android:id="@+id/btn_back"
-        android:layout_width="12dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/pb_step"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="24dp"/>
-
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="타이틀"
-        app:layout_constraintStart_toEndOf="@id/btn_back"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_step"
-        style="@style/Display3"/>
+        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
+        android:layout_marginStart="24dp"
+        style="@style/Headline1"/>
 
-    <TextView
-        android:id="@+id/tv_step"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3/3"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@id/btn_back"
+    <ImageView
+        android:id="@+id/btn_cancel"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:visibility="visible"
+        android:src="@drawable/ic_cancel"
+        app:tint="@color/gray700"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/pb_step"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="24dp"/>
-
-
 
     <ProgressBar
         android:id="@+id/pb_step"
