--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -53,6 +53,20 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ScrollView
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content">
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_sub"
@@ -61,7 +75,7 @@
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_top_bar">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:layout_marginStart="24dp"
@@ -172,7 +186,15 @@
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="@id/tv_laptop_title"
                                 app:layout_constraintTop_toBottomOf="@id/tv_laptop_title"
-                                android:text="6개월 간 어쩌고 저쩌고"/>
+                                android:text="AI로 상태를 점검하고,"/>
+                            <TextView
+                                android:id="@+id/tv_laptop_sub2"
+                                android:layout_width="wrap_content"
+                                style="@style/Body1"
+                                android:layout_height="wrap_content"
+                                app:layout_constraintStart_toStartOf="@id/tv_laptop_sub"
+                                app:layout_constraintTop_toBottomOf="@id/tv_laptop_sub"
+                                android:text="안전하게 사용하세요."/>
 
                             <ImageView
                                 android:layout_width="110dp"
@@ -363,17 +385,18 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_submission"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
+        android:nestedScrollingEnabled="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_submission_title"
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_submission" />
-
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
