--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="14dp"
     android:background="@drawable/submission_border_rounded"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -14,6 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/cl_menu"
+        android:layout_marginBottom="24dp"
         android:src="@drawable/ic_laptap_small"/>
     <TextView
         android:id="@+id/tv_model_number"
@@ -30,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="대여중"
-        style="@style/Label1"
+        style="@style/Label3"
         android:padding="4dp"
         android:textColor="@color/blue300"
         android:background="@drawable/status_border_rounded"
@@ -40,29 +43,36 @@
        app:layout_constraintEnd_toStartOf="@id/btn_down"/>
 
 
-
-
-
-
     <ImageView
         android:id="@+id/btn_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingVertical="18dp"
+        android:paddingEnd="20dp"
         android:src="@drawable/ic_down"
         app:layout_constraintTop_toTopOf="@id/iv_icon"
         app:layout_constraintBottom_toBottomOf="@id/iv_icon"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/cl_menu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+
 
     <View
         android:id="@+id/line"
         android:layout_width="0dp"
         android:layout_marginHorizontal="20dp"
         android:layout_height="1dp"
-        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_icon"
+       app:layout_constraintTop_toTopOf="parent"
         android:background="@color/gray100"/>
 
     <TextView
@@ -122,7 +132,7 @@
        app:layout_constraintTop_toTopOf="@id/bt_file_download" />
 
 
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
