--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -16,10 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_height="40dp">
+        android:layout_height="?actionBarSize">
 
         <ImageView
             android:id="@+id/iv_logo_icon"
@@ -42,7 +40,9 @@
             android:layout_marginStart="12dp"/>
 
         <ImageView
-            android:id="@+id/iv_logout_icon"
+            android:id="@+id/btn_logout"
+            android:paddingVertical="20dp"
+            android:paddingHorizontal="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
