--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -30,6 +30,7 @@
         app:layout_constraintStart_toEndOf="@id/iv_icon"/>
 
     <TextView
+        android:id="@+id/tv_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="대여중"
@@ -50,6 +51,17 @@
         android:paddingVertical="18dp"
         android:paddingEnd="20dp"
         android:src="@drawable/ic_down"
+        app:layout_constraintTop_toTopOf="@id/iv_icon"
+        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <ImageView
+        android:id="@+id/btn_up"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="18dp"
+        android:paddingEnd="20dp"
+        android:src="@drawable/ic_up"
         app:layout_constraintTop_toTopOf="@id/iv_icon"
         app:layout_constraintBottom_toBottomOf="@id/iv_icon"
         app:layout_constraintEnd_toEndOf="parent"/>
