design : 로그인 화면 xml 수정 S12P21D101-181

--- a/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
@@ -80,61 +80,29 @@
             android:id="@+id/iv_kkomi_login"
             android:layout_width="1800dp"
             android:layout_height="180dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="60dp"
             android:src="@drawable/ic_kkomi_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_welcome_message_container" />
 
-        <EditText
-            android:id="@+id/et_email"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="24dp"
-            android:hint="이메일"
-            android:textSize="16sp"
-            android:inputType="textEmailAddress"
-            android:padding="16dp"
-            android:textColorHint="#9297A0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_kkomi_login" />
-
-        <!-- 비밀번호 입력 -->
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="24dp"
-            android:hint="비밀번호"
-            android:textSize="16sp"
-            android:inputType="textPassword"
-            android:padding="16dp"
-            android:textColorHint="#9297A0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_email" />
 
         <!-- 로그인 버튼 -->
         <Button
             android:id="@+id/btn_login"
             android:layout_width="0dp"
-            android:layout_height="56dp"
+            android:layout_height="60dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             android:layout_marginEnd="24dp"
             android:backgroundTint="#3B82F6"
-            android:text="로그인"
+            android:text="SSAFY 로그인"
             android:textColor="@color/white"
             style="@style/Title3"
             app:cornerRadius="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_password" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_kkomi_login" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
