--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step1_intro.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step1_intro.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="잠깐!"
+            android:text="STEP 1"
             android:textColor="@color/gray700"
             style="@style/Display1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:text="기기를 등록하기 전에"
+            android:text="이제 촬영을 시작해 볼까요?"
             android:textColor="@color/gray300"
             style="@style/Body2"
             android:lineSpacingExtra="4dp"
@@ -49,7 +49,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:text="서약서 내용을 꼼꼼히 읽고 동의해주세요!"
+            android:text="가이드라인에 맞춰 노트북을 촬영해주세요!"
             android:textColor="@color/gray300"
             style="@style/Body2"
             android:lineSpacingExtra="4dp"
@@ -62,8 +62,8 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_marginTop="10dp"
-            android:contentDescription="서약서 확인 꼬미"
-            android:src="@drawable/ic_stop_kkomi"
+            android:contentDescription="step1 꼬미"
+            android:src="@drawable/ic_step1_kkomi"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description2" />
