design: 로그인 이미지, 문구 수정 S12P21D101-181

--- a/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/tv_welcome_message_part1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="노트북 대여부터 반납까지,"
+                android:text="대여부터 반납까지,"
                 android:textColor="@color/gray700"
                 style="@style/Display2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +66,8 @@
                 android:id="@+id/tv_sub_welcome_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="꼼대와 함께하는 스마트한 노트북 관리"
-                android:textColor="@color/gray300"
+                android:text="꼼대와 함께하는 스마트한 기기관리"
+                android:textColor="@color/gray200"
                 style="@style/Title3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,9 +78,9 @@
 
         <ImageView
             android:id="@+id/iv_kkomi_login"
-            android:layout_width="1800dp"
-            android:layout_height="180dp"
-            android:layout_marginTop="60dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
+            android:layout_marginTop="40dp"
             android:src="@drawable/ic_kkomi_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
