--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
@@ -28,8 +28,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="노트북 촬영 완료!"
-        android:layout_marginTop="12dp"
-        style="@style/Display1"
+        android:layout_marginTop="30dp"
+        style="@style/Display2"
         android:textColor="@color/gray700"/>
 
     <TextView
@@ -37,11 +37,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AI가 꼼꼼하게 분석할게요"
+        android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_text1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp"
-        style="@style/Display1"/>
+        style="@style/Display3"/>
 
     <TextView
         android:id="@+id/tv_text3"
@@ -52,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@id/cv_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        style="@style/Title2"
+        style="@style/Title3"
         android:layout_marginTop="20dp"
         android:textColor="@color/gray300"/>
 
@@ -115,9 +116,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:textColor="#7E5724"
             android:text="AI 분석 결과는 최종결과 화면에서 확인 가능합니다."/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -125,12 +128,13 @@
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="@color/blue500"
-        android:text="다음"
+        android:text="분석 시작하기"
+        style="@style/Title1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
