--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step2_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step2_result.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="노트북 항목별로 상세한 진단 결과를 확인해보세요!"
         android:textAlignment="center"
-        style="@style/Body2"
+        style="@style/Body1"
         android:textColor="@color/gray300"
         android:layout_marginTop="10dp"
         android:layout_marginStart="24dp"
@@ -67,7 +67,7 @@
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
                 android:paddingTop="30dp"
-                android:paddingBottom="16dp">
+                android:paddingBottom="20dp">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -105,8 +105,8 @@
                 android:orientation="horizontal"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp">
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -144,8 +144,8 @@
                 android:orientation="horizontal"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp">
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -183,8 +183,8 @@
                 android:orientation="horizontal"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp">
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -221,7 +221,7 @@
                 android:orientation="horizontal"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:paddingTop="16dp"
+                android:paddingTop="20dp"
                 android:paddingBottom="30dp">
 
                 <ImageView
@@ -261,6 +261,7 @@
         android:textColor="@color/white"
         android:text="저장 후 다음 단계"
         android:layout_margin="24dp"
+        style="@style/Title1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
