--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step2_intro.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step2_intro.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="잠깐!"
+            android:text="STEP 2"
             android:textColor="@color/gray700"
             style="@style/Display1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="기기를 등록하기 전에"
+            android:text="STEP2는 노트북과 함께 점검을 진행해요!"
             android:textColor="@color/gray300"
             style="@style/Body2"
             android:lineSpacingExtra="4dp"
@@ -41,13 +41,11 @@
 
         <TextView
             android:id="@+id/tv_description2"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:text="서약서 내용을 꼼꼼히 읽고 동의해주세요!"
+            android:text="화면의 안내에 따라 노트북 상태를 점검해주세요."
             android:textColor="@color/gray300"
             style="@style/Body2"
             android:lineSpacingExtra="4dp"
@@ -60,8 +58,8 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_marginTop="10dp"
-            android:contentDescription="서약서 확인 꼬미"
-            android:src="@drawable/ic_stop_kkomi"
+            android:contentDescription="step2 꼬미"
+            android:src="@drawable/ic_kkomi_step2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description2" />
@@ -73,7 +71,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/bg_button_orange"
+            android:background="@drawable/bg_button_intro"
             android:text="확인"
             android:textColor="@color/white"
             style="@style/Title1"
